--- a/source/step_1A.org
+++ b/source/step_1A.org
@@ -111,7 +111,7 @@ In a car, a circuit is needed to ensure that the airbags only deploy when there 
 :END:
 - Our PIC so far is quite limited. While its great that it can flash in patterns (it could signal SOS in [[http://en.wikipedia.org/wiki/Morse_code][Morse]] code), but PICs become more powerful when they can interact with the World around them.
 - Modify your circuit diagram to add a PTM (Push to Make) switch and 10k resistor, as shown in the screenshot below. Make sure you connect the bottom of the switch to input 3 on the PIC.
-[[file:img/step_4.png]]
+[[file:img/Step_4A.png]]
 - If you run your circuit now, you'll see that clicking the button doesn't change the way the program behaves. This is because we've not told the PIC what we'd like to do yet.
 - Go back to your Flowchart, and add a "Digital" diamond to the top of the program, as shown in the picture below. Double-click the diamond, and set it to check if input 1 is turned on.
 [[file:img/step_5.png]]
