--- a/source/step_1.org
+++ b/source/step_1.org
@@ -174,6 +174,7 @@ In a car, a circuit is needed to ensure that the airbags only deploy when there 
 
 ** Quiz Time
 - Complete the quiz for badge.
+- Click on [[https://www.bournetolearn.com/quizzes/y8-piclicence/Lesson_1/index.php][this]] link to complete the quiz.
 - You need to also upload screenshots of your text files.
-<LINK to Quiz1>
+
 
