--- a/source/Homework.org
+++ b/source/Homework.org
@@ -14,7 +14,7 @@
 <a href="https://github.com/stcd11/pic_programmer">Fork me on GitHub</a>
 </div>
 <center>
-<img src='img/sboard.jpg' width=33%>
+<img src='img/soldered.jpg' width=33%>
 </center>
 #+END_HTML
 
